# msc-230

./: CMakeLists.txt  beam.in  init_vis.mac  merge.sh  msc-230.cc  msc.sbatch  run.sh  vis.mac
include/: MSCActionInitialization.hh  MSCEventAction.hh  MSCHistoManager.hh  MSCPhysicalConstruction.hh  MSCPrimaryGenerator.hh  MSCRunAction.hh  MSCSteppingAction.hh
processing/: merge.C  plot.C  table.C
res/: merge.C  neutron.csv  plot.C  proton.C
src/: MSCActionInitialization.cc  MSCEventAction.cc  MSCHistoManager.cc  MSCPhysicalConstruction.cc  MSCPrimaryGenerator.cc  MSCRunAction.cc  MSCSteppingAction.cc
